@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- When parameterizing a type which generated inline parameterized constraints
+  (like the ArrayRef and HashRef builtins) now dies if given a parameter which
+  cannot itself be inlined. Mixing inlinable and non-inlinable constraints
+  previously caused very confusing errors.
+
+
 0.12     2015-12-19
 
 - Fixed tests that failed if Moose wasn't installed. Reported by Karen
